// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.postcss setPlugin functions 1`] = `
Object {
  "postcss-import": Array [
    [Function],
    Object {},
  ],
  "postcss-nested": Array [
    [Function],
    Object {},
  ],
  "postcss-preset-env": Array [
    [Function],
    Object {
      "features": Object {
        "focus-within-pseudo-class": false,
      },
      "stage": 1,
    },
  ],
}
`;

exports[`bud.postcss setPluginOptions functions 1`] = `
Object {
  "postcss-import": Array [
    [Function],
    Object {
      "foo": "bar",
    },
  ],
  "postcss-nested": Array [
    [Function],
    Object {},
  ],
  "postcss-preset-env": Array [
    [Function],
    Object {
      "features": Object {
        "focus-within-pseudo-class": false,
      },
      "stage": 1,
    },
  ],
}
`;

exports[`bud.postcss setPlugins functions 1`] = `
Object {
  "postcss-import": Array [
    [Function],
    Object {},
  ],
  "postcss-nested": Array [
    [Function],
    Object {},
  ],
  "postcss-preset-env": Array [
    [Function],
    Object {
      "features": Object {
        "focus-within-pseudo-class": false,
      },
      "stage": 1,
    },
  ],
}
`;

exports[`bud.postcss unsetPlugin functions 1`] = `
Object {
  "postcss-nested": Array [
    [Function],
    Object {},
  ],
  "postcss-preset-env": Array [
    [Function],
    Object {
      "features": Object {
        "focus-within-pseudo-class": false,
      },
      "stage": 1,
    },
  ],
}
`;
